--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-file",
-  "version": "7.0.0-dev",
+  "version": "6.0.3",
   "description": "Cordova File Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
